force-app/main/default/objects/RW_Payment_Detail_Item__c/RW_Payment_Detail_Item__c.object-meta.xml
<CustomObject>
    <label>SAP Receipt Item</label>
    <nameField>
        <displayFormat>PDI-{00000000}</displayFormat>
        <label>Payment Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Receipt Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>