force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>