force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Assignment__c.field-meta.xml
<CustomField>
    <fullName>RW_Assignment__c</fullName>
    <label>Assignment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>