force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Demand_Item__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand Item</label>
    <referenceTo>RW_Demand_Item__c</referenceTo>
    <relationshipName>Payment_Detail_Items</relationshipName>
    <type>Lookup</type>
</CustomField>