force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Demand_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Number__c</fullName>
    <label>Demand Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>