force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Instrument_Number__c</fullName>
    <label>Instrument Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>