force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Details__c</fullName>
    <label>Payment Details</label>
    <referenceTo>RW_Payment_Details__c</referenceTo>
    <relationshipName>Payment_Detail_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>