force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Status__c.field-meta.xml
<CustomField>
    <fullName>RW_Status__c</fullName>
    <formula>RW_Payment_Details__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>