force-app/main/default/objects/RW_Payment_Detail_Item__c/fields/RW_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>RW_Usage_Description__c</fullName>
    <label>Usage Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>